# vix-ai-ml

./: CMakeLists.txt  README.md
include/vix/ai/ml/: Clustering.hpp  Dataset.hpp  LinearRegression.hpp  Metrics.hpp  Model.hpp  Preprocessing.hpp  Regression.hpp  Types.hpp
src/: Clustering.cpp  Dataset.cpp  LinearRegression.cpp  Model.cpp  Regression.cpp
tests/: CMakeLists.txt  ml_smoke_test.cpp  test_ml.cpp
